cleaning up odds and ends